# visual_translater

./: .bandit  .bash_aliases  .flake8  .gitignore  .prospector.yaml  .pydocstyle  .pylintrc  AGENTS.md  CLAUDE.md  DEVELOPMENT_SETUP.md  Makefile  PERFORMANCE_OPTIMIZATION.md  README.md  build.py  dev.ps1  dev.py  dev.sh  index.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py  setup_python_alias.sh  use_venv_python.sh
.claude/: settings.local.json
.claude/agents/: test-quality-auditor.md
.github/workflows/: ci.yml
config/: production.json  production_config.py
data/: .encryption_key
docs/: ARCHITECTURE.md  BUILD_WINDOWS.md  CHANGELOG.md  CLARIFICATIONS.md  CLEAN_ARCHITECTURE.md  IMPLEMENTATION_TASKS.md  INDEX.md  README.md  REFACTORING_TEMPLATE_SERVICE_DECOMPOSITION_TEMPLATE.md  REFACTORING_TEMPLATE_UI_MVC_TEMPLATE.md  ROADMAP.md  TDD_CLEAN_ARCHITECTURE.md
docs/development/: ARCHITECTURAL_IMPROVEMENTS.md  ARCHITECTURAL_IMPROVEMENTS_COMPLETE.md  UI_MODERNIZATION_ROADMAP.md
docs/reports/: TEST_EXECUTION_RESULTS.md  THREAD_SAFETY_GUIDELINES.md
docs/reports/troubleshooting/: DEV_BAT_ENCODING_FIX.md  DEV_BAT_FINAL_FIX.md
src/: __init__.py
src/ai/: __init__.py  smart_area_detection.py
src/api/: __init__.py  auth.py  middleware.py  rate_limiter.py  routes.py  web_server.py
src/application/dto/: preferences_dto.py  screenshot_dto.py  translation_dto.py
src/benchmarks/: performance_benchmark.py
src/commands/: __init__.py  app_commands.py  base_command.py  screenshot_commands.py  translation_commands.py  tts_commands.py
src/components/: auth_error_handler.py  auth_token_manager.py  batch_item_error_handler.py  batch_item_validator.py  batch_progress_manager.py  config_dependency_validator.py  config_error_collector.py  config_schema_validator.py  config_value_validator.py  data_binder.py  data_transformer.py  database_connection.py  export_data_validator.py  export_error_handler.py  export_progress_tracker.py  format_exporter.py  input_error_handler.py  input_event_manager.py  input_processor.py  input_validator.py  item_processor.py  migration_generator.py  refactored_authenticate_user.py  refactored_export_batch_results.py  refactored_format_report_data.py  refactored_handle_user_input.py  refactored_process_batch_item.py  refactored_process_data_stream.py  refactored_render_template.py  refactored_sync_database_schema.py  refactored_validate_configuration.py  rendering_engine.py  report_aggregator.py  report_data_validator.py  report_error_handler.py  report_formatter.py  schema_diff_analyzer.py  schema_validator.py  session_manager.py  stream_buffer.py  (+5 more)
src/core/: ai_ocr_engine.py  ai_ocr_engine_lite.py  application.py  application_old.py  application_refactored.py  batch_processor.py  di_container.py  event_handlers.py  events.py  ocr_engine.py  screenshot_engine.py  translation_engine.py  tts_engine.py
src/domain/: __init__.py
src/framework/: tdd_refactoring_manager.py
src/handlers/: __init__.py  base_handler.py  command_handlers.py  query_handlers.py
src/models/: __init__.py  config.py  screenshot_data.py  translation.py
src/plugins/: base_plugin.py  plugin_manager.py
src/queries/: __init__.py  base_query.py  config_queries.py  performance_queries.py  screenshot_queries.py  translation_queries.py
src/repositories/: __init__.py  base_repository.py  screenshot_repository.py  translation_repository.py  unit_of_work.py
src/security/: __init__.py  audit.py  auth.py  encryption.py  rate_limiter.py  sanitizer.py
src/services/: cache_service.py  circuit_breaker.py  config_manager.py  container.py  hotkey_service.py  notification_service.py  ocr_service.py  plugin_service.py  task_queue.py  translation_cache.py  translation_service.py
src/state/: __init__.py  actions.py  app_state.py  middleware.py  reducers.py  store.py
src/tests/: conftest.py  test_utils.py
src/ui/: drag_drop_handler.py  enhanced_capture.py  history_window.py  language_selector.py  multi_language_ui.py  progress_indicator.py  real_time_overlay.py  settings_window.py  translation_overlay.py  tray_manager.py
src/utils/: __init__.py  alert_system.py  circuit_breaker_monitor.py  enhanced_metrics.py  exceptions.py  export_manager.py  logger.py  mock_gui.py  mock_keyboard.py  mock_pystray.py  monitoring.py  monitoring_dashboard.py  performance.py  performance_monitor.py  thread_safety.py
tests/: test_integration.py  test_security_scan.py
tests/framework/: test_base.py
tools/: analyze_dependencies.py  analyze_error_handling.py  analyze_performance.py  analyze_threading.py  create_production_checklist.py  optimize_performance.py  quality_check.py  quality_fix.py  quick_fix.py  run_tests.py
(+109 files in other folders)
